--- a/community.html
+++ b/community.html
@@ -10,31 +10,38 @@ tagline: Miembros & Grupos
 <table id="members" class="table table-striped">
 	<tbody>
 		<tr>
-		  <td class="name">Alan Reid <span class="label label-info">Fundador!</span></td>
+		  <td class="name">Alan Reid</td>
+		  <td><span class="label label-info">Fundador</span> <span class="label label-warning">Organizador</span></td>
 		  <td class="follow"><a href="https://twitter.com/alan_reid" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @alan_reid</a></td>
 		</tr>
 		<tr>
-		  <td class="name">Gustavo Arjones <span class="label label-info">Fundador!</span></td>
+		  <td class="name">Gustavo Arjones</td>
+		  <td> <span class="label label-info">Fundador</span></td>
 		  <td class="follow"><a href="https://twitter.com/arjones" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @arjones</a></td>
 		</tr>
 		<tr>
-		  <td class="name">Diego Ramírez <span class="label label-info">Fundador!</span></td>
+		  <td class="name">Diego Ramírez</td>
+		  <td> <span class="label label-info">Fundador</span></td>
 		  <td class="follow"><a href="https://twitter.com/diegoram" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @diegoram</a></td>
 		</tr>
 		<tr>
-		  <td class="name">Luis Farzati <span class="label label-info">Fundador!</span></td>
+		  <td class="name">Luis Farzati</td>
+		  <td> <span class="label label-info">Fundador</span></td>
 		  <td class="follow"><a href="https://twitter.com/luisfarzati" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @luisfarzati</a></td>
-		</tr>		
+		</tr>
 		<tr>
 		  <td class="name">Pablo Paladino</td>
+		  <td></td>
 		  <td class="follow"><a href="https://twitter.com/palamago" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @palamago</a></td>
 		</tr>
 		<tr>
 		  <td class="name">Sebastián Scarano</td>
+		  <td></td>
 		  <td class="follow"><a href="https://twitter.com/develsas" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @develsas</a></td>
 		</tr>
 		<tr>
 		  <td class="name">Nicolás Meléndez</td>
+		  <td></td>
 		  <td class="follow"><a href="https://twitter.com/nfmelendez" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @nfmelendez</a></td>
 		</tr>
 		<tr>
@@ -49,22 +56,32 @@ tagline: Miembros & Grupos
 <h3>Grupos relacionados a #NARDOZ</h3>
 
 <div class="row groups">
+
 	<div class="span6 meetup">
-		<h3>#NARDOZ <span class="label label-info">Oficial!</span></h3>
 		<iframe width="225" height="320" src="http://meetu.ps/1HTmpl" frameborder="0"></iframe>
 	</div>
+
 	<div class="span6 meetup">
-		<h3>Play! Framework Argentina</h3>
 		<iframe width="225" height="320" src="http://meetu.ps/1HTqFb" frameborder="0"></iframe>
 	</div>
+
 </div>
+
 <div class="row groups">
+
 	<div class="span6 meetup">
-		<h3>Scala User Group Argentina</h3>
+		<iframe width="225" height="320" src="http://meetu.ps/1HW3Cg" frameborder="0"></iframe>
+	</div>
+
+	<div class="span6 meetup">
 		<iframe width="225" height="320" src="http://meetu.ps/1HTr7n" frameborder="0"></iframe>
 	</div>
+
+</div>
+
+<div class="row groups">
 	<div class="span6 meetup">
-		<h3>Java User Group Argentina</h3>
 		<iframe width="225" height="500" src="http://meetu.ps/1HTs2T" frameborder="0"></iframe>
 	</div>
+
 </div>
