--- a/community.html
+++ b/community.html
@@ -1,11 +1,11 @@
 ---
 layout: page
-title: Community
-tagline: Miembros & Grupos
+title: Comunidad
+tagline: Miembros &amp; Grupos
 ---
 {% include JB/setup %}
 
-<h3>Miembros de #NARDOZ</h3>
+<h3>Miembros de Nardoz</h3>
 
 <table id="members" class="table table-striped">
 	<tbody>
@@ -30,22 +30,19 @@ tagline: Miembros & Grupos
 		  <td class="follow"><a href="https://twitter.com/luisfarzati" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @luisfarzati</a></td>
 		</tr>
 		<tr>
-		  <td class="name">Pablo Paladino</td>
-		  <td></td>
+		  <td colspan="2" class="name">Pablo Paladino</td>
 		  <td class="follow"><a href="https://twitter.com/palamago" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @palamago</a></td>
 		</tr>
 		<tr>
-		  <td class="name">Sebastián Scarano</td>
-		  <td></td>
+		  <td colspan="2" class="name">Sebastián Scarano</td>
 		  <td class="follow"><a href="https://twitter.com/develsas" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @develsas</a></td>
 		</tr>
 		<tr>
-		  <td class="name">Nicolás Meléndez</td>
-		  <td></td>
+		  <td colspan="2" class="name">Nicolás Meléndez</td>
 		  <td class="follow"><a href="https://twitter.com/nfmelendez" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @nfmelendez</a></td>
 		</tr>
 		<tr>
-		  <td class="name">Jorge Aliss</td>
+		  <td colspan="2" class="name">Jorge Aliss</td>
 		  <td class="follow"><a href="https://twitter.com/jaliss" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @jaliss</a></td>
 		</tr>
 	</tbody>
@@ -53,7 +50,7 @@ tagline: Miembros & Grupos
 
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
-<h3>Grupos relacionados a #NARDOZ</h3>
+<h3>Grupos relacionados a Nardoz</h3>
 
 <div class="row groups">
 
