--- a/talks.html
+++ b/talks.html
@@ -17,11 +17,18 @@ title: Talks
   <tbody>
     <tr>
       <td>19/06/2013</td>
-      <td><strong>Buenos Aires High Scalability Group: Real World Akka Recipes</strong><br />por Jamie Allen</td>
+      <td>
+        <strong>Real World Akka Recipes</strong> por Jamie Allen<br />
+        <span class="label label-important">Buenos Aires High Scalability Group</span>
+      </td>
     </tr>
     <tr>
       <td>17/06/2013</td>
-      <td><strong>Scala User Group Argentina: Effective Akka</strong><br />por Jamie Allen</td>
+      <td>
+        <strong>Effective Akka</strong> por Jamie Allen<br />
+        <span class="label label-important">Scala User Group Argentina</span>
+
+      </td>
     </tr>
     <tr>
       <td>30/05/2013</td>
@@ -76,11 +83,17 @@ title: Talks
     </tr>
     <tr>
       <td>11/05/2012</td>
-      <td><strong>Hackathon de Gobierno Abierto. Presentación de RestOpenGov</strong><br />por Nicolás Melendez, Alan Reid, Sebastián Scarano y Pablo Paladino</td>
+      <td>
+        <strong>Hackathon de Gobierno Abierto. Presentación de RestOpenGov</strong><br />
+        por Nicolás Melendez, Alan Reid, Sebastián Scarano y Pablo Paladino
+      </td>
     </tr>
     <tr>
       <td>05/05/2012</td>
-      <td><strong>Play User Group: Primer Hackathon de Play Framework 2.0 de Latinoamérica</strong></td>
+      <td>
+        <strong>Primer Hackathon de Play Framework 2.0 de Latinoamérica</strong><br />
+        <span class="label label-important">Play Framework Argentina User Group</span>
+      </td>
     </tr>
     <tr>
       <td>27/04/2012</td>
@@ -122,7 +135,11 @@ title: Talks
     </tr>
     <tr>
       <td>30/09/2011</td>
-      <td><strong>Charla en Java User Group Argentina: Play Framework</strong><br/>por Sebastián Scarano y Jorge Aliss</td>
+      <td>
+        <strong>Play Framework</strong><br/>
+        por Sebastián Scarano y Jorge Aliss<br />
+        <span class="label label-important">Java User Group Argentina</span>
+      </td>
     </tr>
     <tr>
       <td>09/09/2011</td>
@@ -134,7 +151,11 @@ title: Talks
     </tr>
     <tr>
       <td>04/08/2011</td>
-      <td><strong>Charla en Java User Group Argentina: Introducción a Scala</strong><br/>por Gustavo Arjones</td>
+      <td>
+        <strong>Introducción a Scala</strong><br/>
+        por Gustavo Arjones<br />
+        <span class="label label-important">Java User Group Argentina</span>
+      </td>
     </tr>
     <tr>
       <td>31/06/2011</td>
