--- a/community.html
+++ b/community.html
@@ -11,26 +11,26 @@ tagline: Miembros &amp; Grupos
 	<tbody>
 		<tr>
 		  <td class="name">Alan Reid</td>
-		  <td><span class="label label-info">Fundador</span> <span class="label label-warning">Organizador</span></td>
+		  <td class="name"><span class="label label-info">Fundador</span>  <span class="label label-warning">Organizador</span></td>
 		  <td class="follow"><a href="https://twitter.com/alan_reid" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @alan_reid</a></td>
 		</tr>
 		<tr>
 		  <td class="name">Gustavo Arjones</td>
-		  <td> <span class="label label-info">Fundador</span></td>
+		  <td class="name"> <span class="label label-info">Fundador</span></td>
 		  <td class="follow"><a href="https://twitter.com/arjones" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @arjones</a></td>
 		</tr>
 		<tr>
 		  <td class="name">Diego Ramírez</td>
-		  <td> <span class="label label-info">Fundador</span></td>
+		  <td class="name"> <span class="label label-info">Fundador</span></td>
 		  <td class="follow"><a href="https://twitter.com/diegoram" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @diegoram</a></td>
 		</tr>
 		<tr>
 		  <td class="name">Luis Farzati</td>
-		  <td> <span class="label label-info">Fundador</span></td>
+		  <td class="name"> <span class="label label-info">Fundador</span></td>
 		  <td class="follow"><a href="https://twitter.com/luisfarzati" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @luisfarzati</a></td>
 		</tr>
 		<tr>
-		  <td colspan="2" class="name">Pablo Paladino</td>
+		  <td colspan="2" class="name">Pablo H. Paladino</td>
 		  <td class="follow"><a href="https://twitter.com/palamago" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @palamago</a></td>
 		</tr>
 		<tr>
@@ -42,9 +42,57 @@ tagline: Miembros &amp; Grupos
 		  <td class="follow"><a href="https://twitter.com/nfmelendez" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @nfmelendez</a></td>
 		</tr>
 		<tr>
+		  <td colspan="2" class="name">Walter Franck</td>
+		  <td class="follow"><a href="https://twitter.com/wfranck" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @wfranck</a></td>
+		</tr>
+		<tr>
 		  <td colspan="2" class="name">Jorge Aliss</td>
 		  <td class="follow"><a href="https://twitter.com/jaliss" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @jaliss</a></td>
 		</tr>
+		<tr>
+		  <td colspan="2" class="name">Chris Mordue</td>
+		  <td class="follow"><a href="https://twitter.com/cmordue" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @cmordue</a></td>
+		</tr>
+		<tr>
+		  <td colspan="2" class="name">Fernando Rodríguez</td>
+		  <td class="follow"><a href="https://twitter.com/frodriguez" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @frodriguez</a></td>
+		</tr>
+		<tr>
+		  <td colspan="2" class="name">Diego Dell'Era</td>
+		  <td class="follow"><a href="https://twitter.com/diegodellera" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @diegodellera</a></td>
+		</tr>
+		<tr>
+		  <td colspan="2" class="name">Pablo Rodríguez</td>
+		  <td class="follow"><a href="https://twitter.com/derfarg" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @derfarg</a></td>
+		</tr>
+		<tr>
+		  <td colspan="2" class="name">Martín Gontovnikas</td>
+		  <td class="follow"><a href="https://twitter.com/mgonto" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @mgonto</a></td>
+		</tr>
+		<tr>
+		  <td colspan="2" class="name">Matías Saguir</td>
+		  <td class="follow"><a href="https://twitter.com/mativs" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @mativs</a></td>
+		</tr>
+		<tr>
+		  <td colspan="2" class="name">Matías Urbano</td>
+		  <td class="follow"><a href="https://twitter.com/matiasurbano" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @matiasurbano</a></td>
+		</tr>
+		<tr>
+		  <td class="name">Max Kraszewski</td>
+		  <td class="name"> <span class="label label-important">nuevo!</span></td>
+		  <td class="follow"><a href="https://twitter.com/minimalart" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @minimalart</a></td>
+		</tr>
+		<tr>
+		  <td class="name">Tom Roggero</td>
+		  <td class="name"> <span class="label label-important">nuevo!</span></td>
+		  <td class="follow"><a href="https://twitter.com/tomasdev" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @tomasdev</a></td>
+		</tr>
+		<tr>
+		  <td class="name">Davo Galavotti</td>
+		  <td class="name"> <span class="label label-important">nuevo!</span></td>
+		  <td class="follow"><a href="https://twitter.com/pixelbeat" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @pixelbeat</a></td>
+		</tr>
+		
 	</tbody>
 </table>
 
@@ -54,30 +102,27 @@ tagline: Miembros &amp; Grupos
 
 <div class="row groups">
 
-	<div class="span6 meetup">
+	<div class="span4 meetup">
 		<iframe width="225" height="320" src="http://meetu.ps/1HTmpl" frameborder="0"></iframe>
 	</div>
 
-	<div class="span6 meetup">
+	<div class="span4 meetup">
 		<iframe width="225" height="320" src="http://meetu.ps/1HTqFb" frameborder="0"></iframe>
 	</div>
 
-</div>
-
-<div class="row groups">
-
-	<div class="span6 meetup">
+	<div class="span4 meetup">
 		<iframe width="225" height="320" src="http://meetu.ps/1HW3Cg" frameborder="0"></iframe>
 	</div>
 
-	<div class="span6 meetup">
-		<iframe width="225" height="320" src="http://meetu.ps/1HTr7n" frameborder="0"></iframe>
-	</div>
-
 </div>
 
 <div class="row groups">
-	<div class="span6 meetup">
+
+	<div class="span4 meetup">
+		<iframe width="225" height="320" src="http://meetu.ps/1HTr7n" frameborder="0"></iframe>
+	</div>
+
+	<div class="span4 meetup">
 		<iframe width="225" height="500" src="http://meetu.ps/1HTs2T" frameborder="0"></iframe>
 	</div>
 
