added link to projects

--- a/community.html
+++ b/community.html
@@ -10,7 +10,7 @@ tagline: Miembros &amp; Grupos
 <table id="members" class="table table-striped">
 	<tbody>
 		<tr>
-		  <td class="name">Alan Reid</td>
+		  <td class="name"><a href="/projects.html#query=Alan+Reid">Alan Reid</a></td>
 		  <td class="name"><span class="label label-info">Fundador</span>  <span class="label label-warning">Organizador</span></td>
 		  <td class="follow"><a href="https://twitter.com/alan_reid" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @alan_reid</a></td>
 		</tr>
@@ -30,15 +30,15 @@ tagline: Miembros &amp; Grupos
 		  <td class="follow"><a href="https://twitter.com/luisfarzati" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @luisfarzati</a></td>
 		</tr>
 		<tr>
-		  <td colspan="2" class="name">Pablo H. Paladino</td>
+		  <td colspan="2" class="name"><a href="/projects.html#query=Pablo+Paladino">Pablo H. Paladino</a></td>
 		  <td class="follow"><a href="https://twitter.com/palamago" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @palamago</a></td>
 		</tr>
 		<tr>
-		  <td colspan="2" class="name">Sebastián Scarano</td>
+		  <td colspan="2" class="name"><a href="/projects.html#query=Sebastián+Scarano">Sebastián Scarano</a></td>
 		  <td class="follow"><a href="https://twitter.com/develsas" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @develsas</a></td>
 		</tr>
 		<tr>
-		  <td colspan="2" class="name">Nicolás Meléndez</td>
+		  <td colspan="2" class="name"><a href="/projects.html#query=Nicolás+Melendez">Nicolás Meléndez</a></td>
 		  <td class="follow"><a href="https://twitter.com/nfmelendez" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @nfmelendez</a></td>
 		</tr>
 		<tr>
@@ -46,7 +46,7 @@ tagline: Miembros &amp; Grupos
 		  <td class="follow"><a href="https://twitter.com/wfranck" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @wfranck</a></td>
 		</tr>
 		<tr>
-		  <td colspan="2" class="name">Jorge Aliss</td>
+		  <td colspan="2" class="name"><a href="/projects.html#query=Jorge+Aliss">Jorge Aliss</a></td>
 		  <td class="follow"><a href="https://twitter.com/jaliss" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @jaliss</a></td>
 		</tr>
 		<tr>
@@ -66,7 +66,7 @@ tagline: Miembros &amp; Grupos
 		  <td class="follow"><a href="https://twitter.com/derfarg" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @derfarg</a></td>
 		</tr>
 		<tr>
-		  <td colspan="2" class="name">Martín Gontovnikas</td>
+		  <td colspan="2" class="name"><a href="/projects.html#query=Martín+Gontovnikas">Martín Gontovnikas</a></td>
 		  <td class="follow"><a href="https://twitter.com/mgonto" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @mgonto</a></td>
 		</tr>
 		<tr>
@@ -74,7 +74,7 @@ tagline: Miembros &amp; Grupos
 		  <td class="follow"><a href="https://twitter.com/mativs" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @mativs</a></td>
 		</tr>
 		<tr>
-		  <td colspan="2" class="name">Matías Urbano</td>
+		  <td colspan="2" class="name"><a href="/projects.html#query=Matías+Urbano">Matías Urbano</a></td>
 		  <td class="follow"><a href="https://twitter.com/matiasurbano" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @matiasurbano</a></td>
 		</tr>
 		<tr>
@@ -92,7 +92,7 @@ tagline: Miembros &amp; Grupos
 		  <td class="name"> <span class="label label-important">nuevo!</span></td>
 		  <td class="follow"><a href="https://twitter.com/pixelbeat" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @pixelbeat</a></td>
 		</tr>
-		
+
 	</tbody>
 </table>
 
