--- a/community.html
+++ b/community.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: default
 title: Comunidad
 tagline: Miembros &amp; Grupos
 ---
@@ -7,98 +7,270 @@ tagline: Miembros &amp; Grupos
 
 <h3>Miembros de Nardoz</h3>
 
-<table id="members" class="table table-striped">
-	<tbody>
-		<tr>
-		  <td class="name"><a href="/projects.html#query=Alan+Reid">Alan Reid</a></td>
-		  <td class="name"><span class="label label-info">Fundador</span>  <span class="label label-warning">Organizador</span></td>
-		  <td class="follow"><a href="https://twitter.com/alan_reid" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @alan_reid</a></td>
-		</tr>
-		<tr>
-		  <td class="name">Gustavo Arjones</td>
-		  <td class="name"> <span class="label label-info">Fundador</span></td>
-		  <td class="follow"><a href="https://twitter.com/arjones" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @arjones</a></td>
-		</tr>
-		<tr>
-		  <td class="name">Diego Ramírez</td>
-		  <td class="name"> <span class="label label-info">Fundador</span></td>
-		  <td class="follow"><a href="https://twitter.com/diegoram" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @diegoram</a></td>
-		</tr>
-		<tr>
-		  <td class="name">Luis Farzati</td>
-		  <td class="name"> <span class="label label-info">Fundador</span></td>
-		  <td class="follow"><a href="https://twitter.com/luisfarzati" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @luisfarzati</a></td>
-		</tr>
-		<tr>
-		  <td colspan="2" class="name"><a href="/projects.html#query=Pablo+Paladino">Pablo H. Paladino</a></td>
-		  <td class="follow"><a href="https://twitter.com/palamago" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @palamago</a></td>
-		</tr>
-		<tr>
-		  <td colspan="2" class="name"><a href="/projects.html#query=Sebastián+Scarano">Sebastián Scarano</a></td>
-		  <td class="follow"><a href="https://twitter.com/develsas" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @develsas</a></td>
-		</tr>
-		<tr>
-		  <td colspan="2" class="name"><a href="/projects.html#query=Nicolás+Melendez">Nicolás Meléndez</a></td>
-		  <td class="follow"><a href="https://twitter.com/nfmelendez" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @nfmelendez</a></td>
-		</tr>
-		<tr>
-		  <td colspan="2" class="name">Walter Franck</td>
-		  <td class="follow"><a href="https://twitter.com/wfranck" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @wfranck</a></td>
-		</tr>
-		<tr>
-		  <td colspan="2" class="name"><a href="/projects.html#query=Jorge+Aliss">Jorge Aliss</a></td>
-		  <td class="follow"><a href="https://twitter.com/jaliss" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @jaliss</a></td>
-		</tr>
-		<tr>
-		  <td colspan="2" class="name">Chris Mordue</td>
-		  <td class="follow"><a href="https://twitter.com/cmordue" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @cmordue</a></td>
-		</tr>
-		<tr>
-		  <td colspan="2" class="name">Fernando Rodríguez</td>
-		  <td class="follow"><a href="https://twitter.com/frodriguez" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @frodriguez</a></td>
-		</tr>
-		<tr>
-		  <td colspan="2" class="name">Diego Dell'Era</td>
-		  <td class="follow"><a href="https://twitter.com/diegodellera" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @diegodellera</a></td>
-		</tr>
-		<tr>
-		  <td colspan="2" class="name">Pablo Rodríguez</td>
-		  <td class="follow"><a href="https://twitter.com/derfarg" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @derfarg</a></td>
-		</tr>
-		<tr>
-		  <td colspan="2" class="name"><a href="/projects.html#query=Martín+Gontovnikas">Martín Gontovnikas</a></td>
-		  <td class="follow"><a href="https://twitter.com/mgonto" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @mgonto</a></td>
-		</tr>
-		<tr>
-		  <td colspan="2" class="name">Matías Saguir</td>
-		  <td class="follow"><a href="https://twitter.com/mativs" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @mativs</a></td>
-		</tr>
-		<tr>
-		  <td colspan="2" class="name"><a href="/projects.html#query=Matías+Urbano">Matías Urbano</a></td>
-		  <td class="follow"><a href="https://twitter.com/matiasurbano" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @matiasurbano</a></td>
-		</tr>
-		<tr>
-		  <td class="name">Max Kraszewski</td>
-		  <td class="name"> <span class="label label-important">nuevo!</span></td>
-		  <td class="follow"><a href="https://twitter.com/minimalart" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @minimalart</a></td>
-		</tr>
-		<tr>
-		  <td class="name">Tom Roggero</td>
-		  <td class="name"> <span class="label label-important">nuevo!</span></td>
-		  <td class="follow"><a href="https://twitter.com/tomasdev" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @tomasdev</a></td>
-		</tr>
-		<tr>
-		  <td class="name">Davo Galavotti</td>
-		  <td class="name"> <span class="label label-important">nuevo!</span></td>
-		  <td class="follow"><a href="https://twitter.com/pixelbeat" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @pixelbeat</a></td>
-		</tr>
+<ul class="member-grid">
 
-	</tbody>
-</table>
+	<li>
+		<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/378800000014358398/03df1908ab86630af5cc5420decd579f.png)">
+			<div class="member-info">
+				<h3>Alan Reid</h3>
+				<p>
+					CTO at Zenith Sistemas SA. Organizer of Nardoz.
+					<a target="_blank" href="http://twitter.com/alan_reid">Twitter</a>
+					<a href="/projects.html#query=Alan+Reid">Proyectos</a>
+				</p>
+			</div>
+		</div>
+	</li>
 
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+	<li>
+		<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/3730371638/691f471a306031b9aac441396d7034ad.jpeg)">
+			<div class="member-info">
+				<h3>Gustavo Arjones</h3>
+				<p>
+					Entrepreneur and CTO of Socialmetrix
+					<a target="_blank" href="http://twitter.com/arjones">Twitter</a>
+				</p>
+			</div>
+		</div>
+	</li>
 
-<h3>Grupos relacionados a Nardoz</h3>
+	<li>
+		<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/1157351292/IMG_2299.JPG)">
+			<div class="member-info">
+				<h3>Diego Ramírez</h3>
+				<p>
+					Pinche Programmer
+					<a target="_blank" href="https://twitter.com/diegoram">Twitter</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+	<li>
+		<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/3416584414/374eee5f98fdc59619b14baf26b58f5f.jpeg)">
+			<div class="member-info">
+				<h3 class="one-line">Luis Farzati</h3>
+				<p>
+					Programador con busarda. Evangelista del Apocalipsis
+					<a target="_blank" href="https://twitter.com/luisfarzati">Twitter</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+	<li>
+		<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/3606173010/73df77e498aa4aa2200f6266242ccec0.jpeg)">
+			<div class="member-info">
+				<h3>Pablo Paladino</h3>
+				<p>
+					Web Technologies Engineer
+					<a target="_blank" href="https://twitter.com/palamago">Twitter</a>
+					<a href="/projects.html#query=Pablo+Paladino">Proyectos</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+	<li>
+		<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/1557699557/penguin_armed.jpg)">
+			<div class="member-info">
+				<h3>Sebastián Scarano</h3>
+				<p>
+					Lead en Ministerio de Trabajo
+					<a target="_blank" href="https://twitter.com/develsas">Twitter</a>
+					<a href="/projects.html#query=Sebastián+Scarano">Proyectos</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+	<li>
+		<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/3064331698/ab8843bf13bc0392c11c46d9deeb7e08.jpeg)">
+			<div class="member-info">
+				<h3>Nicolás Meléndez</h3>
+				<p>
+					Arquitecto Java
+					<a target="_blank" href="https://twitter.com/nfmelendez">Twitter</a>
+					<a href="/projects.html#query=Nicolás+Meléndez">Proyectos</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+	<li>
+		<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/3052631576/f2ce53cf07a9ab508b8f9004d149f5a1.jpeg)">
+			<div class="member-info">
+				<h3>Walter Franck</h3>
+				<p>
+					Web Developer
+					<a target="_blank" href="https://twitter.com/wfranck">Twitter</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+	<li>
+		<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/1598161768/jorge_avatar_big.jpg)">
+			<div class="member-info">
+				<h3 class="one-line">Jorge Aliss</h3>
+				<p>
+					Father, Geek, Freelancer. Scala &amp; Play Framework fan
+					<a target="_blank" href="https://twitter.com/jaliss">Twitter</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+	<li>
+		<div class="member-item" style="background-image:url(http://cl.ly/image/1k1Y330T240i/IMG_4075_4.png)">
+			<div class="member-info">
+				<h3>Chris Mordue</h3>
+				<p>
+					Analytics, distributed systems, backpacking
+					<a target="_blank" href="https://twitter.com/cmordue">Twitter</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+	<li>
+		<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/590375995/frodriguez.jpg)">
+			<div class="member-info">
+				<h3>Fernando Rodríguez</h3>
+				<p>
+					Tech Enthusiast. Professor of Distributed Systems
+					<a target="_blank" href="https://twitter.com/frodriguez">Twitter</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+	<li>
+		<div class="member-item" style="background-image:url(http://cl.ly/image/00390F1B360n/img.png)">
+			<div class="member-info">
+				<h3>Diego Dell'Era</h3>
+				<p>
+					Developer at Socialmetrix
+					<a target="_blank" href="https://twitter.com/diegodellera">Twitter</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+	<li>
+		<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/1627538423/fottt.jpg)">
+			<div class="member-info">
+				<h3>Pablo Rodríguez</h3>
+				<p>
+					CEO at EstiloWeb.net
+					<a target="_blank" href="https://twitter.com/derfarg">Twitter</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+	<li>
+		<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/1904315197/martin.jpg)">
+			<div class="member-info">
+				<h3>Martín Gontovnikas</h3>
+				<p>
+					Geek, Nerd, Coder &amp; Fun
+					<a target="_blank" href="https://twitter.com/mgonto">Twitter</a>
+					<a href="/projects.html#query=Martín+Gontovnikas">Proyectos</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+	<li>
+		<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/3406182551/337fbb252c1feebb142aa5c73ef98b6a.jpeg)">
+			<div class="member-info">
+				<h3>Matías Saguir</h3>
+				<p>
+					Anime, Programación, Chábe y quizás Literatura
+					<a target="_blank" href="https://twitter.com/mativs">Twitter</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+	<li>
+		<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/378800000008943621/ca8e4269124e52977fac973b919b6bca.jpeg)">
+			<div class="member-info">
+				<h3>Matías Urbano</h3>
+				<p>
+					Enterpreneur &amp; Developer
+					<a target="_blank" href="https://twitter.com/matiasurbano">Twitter</a>
+					<a href="/projects.html#query=Matías+Urbano">Proyectos</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+	<li>
+		<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/378800000008960145/25663f39e4287f3fe24ef9f41538c9b9.jpeg)">
+			<div class="member-info">
+				<h3>Matías Almada</h3>
+				<p>
+					Desarrollador Web
+					<a target="_blank" href="https://twitter.com/hi_matt">Twitter</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+	<li>
+		<div class="member-item" style="background-image:url(http://cl.ly/image/1y0L3T1V242Z/Profile_-_7.png)">
+			<div class="member-info">
+				<h3>Max Kraszewski</h3>
+				<p>
+					Cofounder &amp; CTO de Psicofxp y Opicos
+					<a target="_blank" href="https://twitter.com/minimalart">Twitter</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+	<li>
+		<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/1201114878/avatarguido.jpg)">
+			<div class="member-info">
+				<h3>Guido Vilariño</h3>
+				<p>
+					Co-founder at Fanwards
+					<a target="_blank" href="https://twitter.com/gvilarino">Twitter</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+	<li>
+		<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/1873834431/image.jpg)">
+			<div class="member-info">
+				<h3>Tom Roggero</h3>
+				<p>
+					Developer, runner &amp; UX lover
+					<a target="_blank" href="https://twitter.com/tomasdev">Twitter</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+	<li>
+		<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/3750709184/6b0d874fb982314fe357d03800cee2c1.png)">
+			<div class="member-info">
+				<h3>Davo Galavotti</h3>
+				<p>
+					Data visualization and digital creative
+					<a target="_blank" href="https://twitter.com/pixelbeat">Twitter</a>
+				</p>
+			</div>
+		</div>
+	</li>
+
+</ul>
+
+
+<h3>Meetups amigos</h3>
 
 <div class="row groups">
 
