--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@ title: Proyectos
 ---
 {% include JB/setup %}
 
-<div class="container-projects">
+<div class="container">
 
   <div class="page-header">
     <h1>{{ page.title }}</h1>
