added last meeting

--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@ title: Talks
     </tr>
   </thead>
   <tbody>
+   <tr>
+      <td>24/07/2013</td>
+      <td>
+        <strong>Nardoz Mobile</strong>
+        <ol>
+          <li><strong>iOS, Android, BlackBerry</strong> por Mauro Urani</li>
+          <li><strong>FirefoxOS</strong> por Guillermo Movia</li>
+        </ol>
+        <u>Invitados especiales:</u>
+        <ul>
+          <li>Diana Livits (Relationship Marketing Manager, Mozilla)</li>
+          <li>Mark Cranson (Mobile Business Development, Mozilla)</li>
+          <li>Patrick Hundal (Technical Business Development, Mozilla)</li>
+        </ul>
+      </td>
+    </tr>
     <tr>
       <td>19/06/2013</td>
       <td>
