--- a/talks.html
+++ b/talks.html
@@ -38,14 +38,14 @@ title: Talks
       <tr>
         <td>19/06/2013</td>
         <td>
-          <strong>Real World Akka Recipes</strong> por Jamie Allen<br />
+          <strong>Real World Akka Recipes</strong> por Jamie Allen (Director of Consulting, Typesafe)<br />
           <span class="label label-important">Buenos Aires High Scalability Group</span>
         </td>
       </tr>
       <tr>
         <td>17/06/2013</td>
         <td>
-          <strong>Effective Akka</strong> por Jamie Allen<br />
+          <strong>Effective Akka</strong> por Jamie Allen (Director of Consulting, Typesafe)<br />
           <span class="label label-important">Scala User Group Argentina</span>
 
         </td>
