Added description to the community section

--- a/community.html
+++ b/community.html
@@ -8,6 +8,29 @@ tagline: Miembros &amp; Grupos
 <div class="container">
 
 	<div class="page-header">
+    <h1>Comunidad</h1>
+  </div>
+
+  <p>
+  	Nardoz es una comunidad de desarrolladores que, cerveza de por medio, se reúnen a hablar y compartir sus experiencias con las <strong>últimas tecnologías</strong>. Las charlas son tan variadas como los intereses del grupo: desde <strong>programación</strong>, <strong>Big Data</strong> y <strong>sistemas distribuídos</strong>, hasta <strong>Open Hardware</strong> y <strong>Open Data</strong>.
+  </p>
+  <p>
+  	Algunos integrantes de Nardoz aportan activamente a la comunidad de Datos Abiertos, tanto desarrollando nuevas herramientas y visualizaciones, como participando en eventos afines. También hay integrantes que formaron meetups paralelos (listados abajo), en los que se reúnen para tratar temas específicos.
+  </p>
+
+
+<!--
+  <h3>Ingredientes para un buen nardoz</h3>
+  <ol>
+  	<li>Cerveza</li>
+  	<li>La temática de las charlas son variadas, pero siempre dentro del marco de la tecnología.</li>
+  	<li>Cualquiera del grupo puede proponer y dar una charla.</li>
+  	<li>(Idealmente) todos tienen que dar al menos una charla en algún momento de su estadía.</li>
+  	<li>No hay ideas demasiado locas.</li>
+  </ol>
+
+
+	<div class="page-header">
     <h1>Miembros de Nardoz</h1>
   </div>
 
@@ -272,6 +295,7 @@ tagline: Miembros &amp; Grupos
 		</li>
 
 	</ul>
+	-->
 
 	<div class="page-header">
     <h1>Meetups amigos</h1>
