--- a/talks.html
+++ b/talks.html
@@ -20,6 +20,17 @@ title: Talks
     </thead>
     <tbody>
       <tr>
+        <td>03/10/2013</td>
+        <td>
+          <strong>DIY Electronics</strong>
+          <ol>
+           <li><strong>Kiwi: Estaciones de bicicletas automatizadas (Arduino + RaspberryPi)</strong> por Alan Reid e Ignacio Orlandini</li>
+            <li><strong>Quadcopter y bot con Arduino</strong> por Gustavo Arjones y Gustavo Saientz</li>
+            <li><strong>ElBraian: Bot autónomo con RaspberryPi</strong> por Diego Ramírez</li>
+          </ol>
+        </td>
+      </tr>
+      <tr>
         <td>24/07/2013</td>
         <td>
           <strong>Nardoz Mobile</strong>
