--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@ title: Talks
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <td>03/10/2013</td>
+      <td>
+        <strong>DIY Electronics</strong>
+        <ol>
+          <li><strong>Kiwi: Estaciones de bicicletas automatizadas (Arduino + RaspberryPi)</strong> <br />por Alan Reid e Ignacio Orlandini</li>
+          <li><strong>Quadcopter y bot con Arduino</strong> por Gustavo Arjones y Gustavo Saientz</li>
+          <li><strong>ElBraian: Bot autónomo con RaspberryPi</strong> por Diego Ramírez</li>
+        </ol>
+      </td>
+    </tr>
    <tr>
       <td>24/07/2013</td>
       <td>
