--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@ title: Talks
   </thead>
   <tbody>
     <tr>
+      <td>05/10/2013</td>
+      <td>
+        <strong>Coffeescript &amp; Backbone + Q&amp;A</strong> por Jeremy Ashkenas (Creador de Backbone, Coffescript y Underscore)<br />
+      </td>
+    </tr>
+    <tr>
       <td>03/10/2013</td>
       <td>
         <strong>DIY Electronics</strong>
         <ol>
-          <li><strong>Kiwi: Estaciones de bicicletas automatizadas (Arduino + RaspberryPi)</strong> <br />por Alan Reid e Ignacio Orlandini</li>
+
           <li><strong>Quadcopter y bot con Arduino</strong> por Gustavo Arjones y Gustavo Saientz</li>
           <li><strong>ElBraian: Bot autónomo con RaspberryPi</strong> por Diego Ramírez</li>
         </ol>
