--- a/talks.html
+++ b/talks.html
@@ -20,6 +20,12 @@ title: Talks
     </thead>
     <tbody>
       <tr>
+        <td>05/10/2013</td>
+        <td>
+          <strong>Coffeescript &amp; Backbone + Q&amp;A</strong> por Jeremy Ashkenas (Creador de Backbone, Coffescript y Underscore)<br />
+        </td>
+      </tr>
+      <tr>
         <td>03/10/2013</td>
         <td>
           <strong>DIY Electronics</strong>
