--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: Talks
       <td>
         <strong>DIY Electronics</strong>
         <ol>
-
+          <li><strong>Kiwi: Estaciones de bicicletas automatizadas (Arduino + RaspberryPi)</strong> por Alan Reid e Ignacio Orlandini</li>
           <li><strong>Quadcopter y bot con Arduino</strong> por Gustavo Arjones y Gustavo Saientz</li>
           <li><strong>ElBraian: Bot autónomo con RaspberryPi</strong> por Diego Ramírez</li>
         </ol>
