Added a new talk

--- a/talks.html
+++ b/talks.html
@@ -20,6 +20,16 @@ title: Talks
     </thead>
     <tbody>
       <tr>
+        <td>13/11/2013</td>
+        <td>
+          <strong>Nardoz de virtualización</strong>
+          <ol>
+            <li><strong>Vagrant: Creando ambientes de desarrollo aislados y replicables</strong> <br />por Guido Marucci Blas</li>
+            <li><strong>Docker</strong> por Fernando Rodriguez Olivera</li>
+          </ol>
+        </td>
+     </tr>
+      <tr>
         <td>05/10/2013</td>
         <td>
           <strong>Coffeescript &amp; Backbone + Q&amp;A</strong> por Jeremy Ashkenas (Creador de Backbone, Coffescript y Underscore)<br />
