--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@ title: Talks
   </thead>
   <tbody>
     <tr>
+      <td>13/11/2013</td>
+      <td>
+        <strong>Nardoz de virtualización</strong>
+        <ol>
+          <li><strong>Vagrant: Creando ambientes de desarrollo aislados y replicables</strong> <br />por Guido Marucci Blas</li>
+          <li><strong>Docker</strong> por Fernando Rodriguez Olivera</li>
+        </ol>
+      </td>
+   </tr>
+    <tr>
       <td>05/10/2013</td>
       <td>
         <strong>Coffeescript &amp; Backbone + Q&amp;A</strong> por Jeremy Ashkenas (Creador de Backbone, Coffescript y Underscore)<br />
@@ -31,7 +41,7 @@ title: Talks
           <li><strong>ElBraian: Bot autónomo con RaspberryPi</strong> por Diego Ramírez</li>
         </ol>
       </td>
-    </tr>
+   </tr>
    <tr>
       <td>24/07/2013</td>
       <td>
