--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@ title: Talks
     </tr>
   </thead>
   <tbody>
+     <tr>
+        <td>17/12/2013</td>
+        <td>
+          <strong>Asado de fin de año</strong> 
+        </td>
+     </tr>
     <tr>
       <td>04/12/2013</td>
       <td>
