--- a/talks.html
+++ b/talks.html
@@ -20,6 +20,12 @@ title: Talks
     </thead>
     <tbody>
       <tr>
+        <td>17/12/2013</td>
+        <td>
+          <strong>Asado de fin de año</strong> 
+        </td>
+     </tr>
+      <tr>
         <td>04/12/2013</td>
         <td>
           <strong>Nardoz de UI/UX: Elementos de diseño de interfaces</strong> por Davo Galavotti
