--- a/talks.html
+++ b/talks.html
@@ -9,6 +9,24 @@ title: Talks
     <h1>Talks</h1>
   </div>
 
+  <h3>Año 2014</h3>
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>Fecha</th>
+        <th>Título</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>17/02/2014</td>
+        <td>
+          <strong>Where's my straw? What does a drive-thru have to teach us about optimization of tools and processes?</strong> por Kyle Simpson
+        </td>
+     </tr>
+    </tbody>
+  </table>
+
   <h3>Año 2013</h3>
 
   <table class="table table-striped table-bordered">
