added a new talk

--- a/talks.html
+++ b/talks.html
@@ -19,6 +19,12 @@ title: Talks
     </thead>
     <tbody>
       <tr>
+        <td>25/02/2014</td>
+        <td>
+          <strong>Nardoz de Criptomonedas</strong> por Manu Aráoz
+        </td>
+      </tr>
+      <tr>
         <td>17/02/2014</td>
         <td>
           <strong>Where's my straw? What does a drive-thru have to teach us about optimization of tools and processes?</strong> por Kyle Simpson
