--- a/talks.html
+++ b/talks.html
@@ -19,6 +19,12 @@ title: Talks
     </thead>
     <tbody>
       <tr>
+        <td>24/04/2014</td>
+        <td>
+          <strong>Nardoz de Escalabilidad de Juegos Masivos con Google Cloud</strong> por Hernan Liendo
+        </td>
+      </tr>
+      <tr>
         <td>25/02/2014</td>
         <td>
           <strong>Nardoz de Criptomonedas</strong> por Manu Aráoz
