--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@ title: Talks
   </thead>
   <tbody>
     <tr>
+      <td>14/05/2014</td>
+      <td>
+        <strong>Criptonardoz: Introducción a la criptografía</strong> por Andrés Quijano
+      </td>
+    </tr>
+    <tr>
       <td>24/04/2014</td>
       <td>
         <strong>Nardoz de Escalabilidad de Juegos Masivos con Google Cloud</strong> por Hernan Liendo
