--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@ title: Talks
   </thead>
   <tbody>
     <tr>
+      <td>13/08/2014</td>
+      <td>
+        <strong>Introducción a Apache Spark</strong> por Gustavo Arjones
+      </td>
+    </tr>
+    <tr>
       <td>14/05/2014</td>
       <td>
         <strong>Criptonardoz: Introducción a la criptografía</strong> por Andrés Quijano
