--- a/talks.html
+++ b/talks.html
@@ -21,7 +21,7 @@ title: Talks
       <tr>
         <td>13/08/2014</td>
         <td>
-          <strong>Introducción a Apache Spark</strong> por Gustavo Arjones
+          <strong>Apache Spark: Un framework de procesamiento rápido a gran escala</strong> por Gustavo Arjones
         </td>
       </tr>
       <tr>
