--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@ title: Talks
   </thead>
   <tbody>
     <tr>
+      <td>23/09/2014</td>
+      <td>
+        <strong>Edge.js</strong> por Tomasz Janczuk
+      </td>
+    </tr>
+    <tr>
+      <td>20/09/2014</td>
+      <td>
+        <strong>HackDay: Data visualizations with Twitter data</strong>
+      </td>
+    </tr>
+    <tr>
       <td>13/08/2014</td>
       <td>
         <strong>Apache Spark: Un framework de procesamiento rápido a gran escala</strong> por Gustavo Arjones
