--- a/talks.html
+++ b/talks.html
@@ -19,6 +19,12 @@ title: Talks
     </thead>
     <tbody>
       <tr>
+        <td>06/12/2014</td>
+        <td>
+          <strong>Pine Hackathon</strong>
+        </td>
+      </tr>
+      <tr>
         <td>23/09/2014</td>
         <td>
           <strong>Edge.js</strong> por Tomasz Janczuk
