--- a/talks.html
+++ b/talks.html
@@ -9,6 +9,39 @@ title: Talks
     <h1>Talks</h1>
   </div>
 
+  <h3>Año 2015</h3>
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>Fecha</th>
+        <th>Título</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>02/07/2015</td>
+        <td>
+          <strong>Rust 1.0: Conceptos principales y diferenciales</strong> por Nicolás Meléndez
+        </td>
+      </tr>
+      <tr>
+        <td>24/06/2015</td>
+        <td>
+          <ol>
+            <li><strong>Deis: Your PaaS, your rules</strong> <br />por Guido Vilariño</li>
+            <li><strong>Introducción a la criptografía</strong> por Andrés Quijano</li>
+          </ol>
+        </td>
+      </tr>
+      <tr>
+        <td>20/06/2015</td>
+        <td>
+          <strong>HackDay: Data visualizations with Twitter data V2</strong>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
   <h3>Año 2014</h3>
   <table class="table table-striped table-bordered">
     <thead>
