--- a/talks.html
+++ b/talks.html
@@ -28,7 +28,7 @@ title: Talks
         <td>24/06/2015</td>
         <td>
           <ol>
-            <li><strong>Deis: Your PaaS, your rules</strong> <br />por Guido Vilariño</li>
+            <li><strong>Deis: Your PaaS, your rules</strong> por Guido Vilariño</li>
             <li><strong>Introducción a la criptografía</strong> por Andrés Quijano</li>
           </ol>
         </td>
