--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 ---
 layout: page
-title: Talks
+title: Nardoz
 ---
 {% include JB/setup %}
+
+<p>
+  Nardoz es una comunidad de desarrolladores que, cerveza de por medio, se reúnen a hablar y compartir sus experiencias con las <strong>últimas tecnologías</strong>. Las charlas son tan variadas como los intereses del grupo: desde <strong>programación</strong>, <strong>Big Data</strong> y <strong>sistemas distribuídos</strong>, hasta <strong>Open Hardware</strong> y <strong>Open Data</strong>.
+</p>
+<p>
+  Algunos integrantes de Nardoz aportan activamente a la comunidad de Datos Abiertos, tanto desarrollando nuevas herramientas y visualizaciones, como participando en eventos afines. También hay integrantes que formaron meetups paralelos (listados abajo), en los que se reúnen para tratar temas específicos.
+</p>
 
 <h3>Año 2015</h3>
 <table class="table table-striped table-bordered">
