--- a/community.html
+++ b/community.html
@@ -12,10 +12,7 @@ tagline: Miembros &amp; Grupos
   </div>
 
   <p>
-  	Nardoz es una comunidad de desarrolladores que, cerveza de por medio, se reúnen a hablar y compartir sus experiencias con las <strong>últimas tecnologías</strong>. Las charlas son tan variadas como los intereses del grupo: desde <strong>programación</strong>, <strong>Big Data</strong> y <strong>sistemas distribuídos</strong>, hasta <strong>Open Hardware</strong> y <strong>Open Data</strong>.
-  </p>
-  <p>
-  	Algunos integrantes de Nardoz aportan activamente a la comunidad de Datos Abiertos, tanto desarrollando nuevas herramientas y visualizaciones, como participando en eventos afines. También hay integrantes que formaron meetups paralelos (listados abajo), en los que se reúnen para tratar temas específicos.
+  	Algunos integrantes que formaron otros meetups (listados abajo), en los que se reúnen para tratar temas específicos.
   </p>
 
 
