--- a/community.html
+++ b/community.html
@@ -12,7 +12,7 @@ tagline: Miembros &amp; Grupos
   </div>
 
   <p>
-  	Algunos integrantes que formaron otros meetups (listados abajo), en los que se reúnen para tratar temas específicos.
+  	Algunos integrantes que formaron otros meetups afines (listados abajo), en los que se reúnen para tratar temas específicos.
   </p>
 
 
