--- a/community.html
+++ b/community.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: default
 title: Comunidad
 tagline: Miembros &amp; Grupos
 ---
@@ -308,7 +308,7 @@ tagline: Miembros &amp; Grupos
 			<iframe width="225" height="320" src="http://meetu.ps/1HTqFb" frameborder="0"></iframe>
 		</div>
 
-		<div class="span3 meetup" style="clear:left">
+		<div class="span3 meetup">
 			<iframe width="225" height="320" src="http://meetu.ps/1HW3Cg" frameborder="0"></iframe>
 		</div>
 
