--- a/community.html
+++ b/community.html
@@ -7,14 +7,6 @@ tagline: Miembros &amp; Grupos
 
 <div class="container">
 
-	<div class="page-header">
-    <h1>Comunidad</h1>
-  </div>
-
-  <p>
-  	Algunos integrantes que formaron otros meetups afines (listados abajo), en los que se reúnen para tratar temas específicos.
-  </p>
-
 
 <!--
   <h3>Ingredientes para un buen nardoz</h3>
@@ -297,6 +289,10 @@ tagline: Miembros &amp; Grupos
 	<div class="page-header">
     <h1>Meetups amigos</h1>
   </div>
+
+  <p>
+  	Algunos integrantes que formaron otros meetups afines (listados abajo), en los que se reúnen para tratar temas específicos :)
+  </p>
 
 	<div class="row groups">
 
