--- a/community.html
+++ b/community.html
@@ -1,316 +1,35 @@
 ---
-layout: default
+layout: page
 title: Comunidad
-tagline: Miembros &amp; Grupos
 ---
 {% include JB/setup %}
 
-<div class="container">
 
 
-<!--
-  <h3>Ingredientes para un buen nardoz</h3>
-  <ol>
-  	<li>Cerveza</li>
-  	<li>La temática de las charlas son variadas, pero siempre dentro del marco de la tecnología.</li>
-  	<li>Cualquiera del grupo puede proponer y dar una charla.</li>
-  	<li>(Idealmente) todos tienen que dar al menos una charla en algún momento de su estadía.</li>
-  	<li>No hay ideas demasiado locas.</li>
-  </ol>
+<div class="page-header">
+  <h1>Meetups amigos</h1>
+</div>
 
+<p>
+	Algunos integrantes que formaron otros meetups afines (listados abajo), en los que se reúnen para tratar temas específicos :)
+</p>
 
-	<div class="page-header">
-    <h1>Miembros de Nardoz</h1>
-  </div>
+<div class="row groups">
 
-	<ul class="member-grid">
-
-		<li>
-			<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/378800000039995365/a7e999e11b525a7d68d765567ce39ad0.png)">
-				<div class="member-info">
-					<h3>Alan Reid</h3>
-					<p>
-						CTO at Zenith Sistemas SA. Organizer of Nardoz.
-						<a target="_blank" href="http://twitter.com/alan_reid">Twitter</a>
-						<a href="/projects.html#query=Alan+Reid">Proyectos</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/3730371638/691f471a306031b9aac441396d7034ad.jpeg)">
-				<div class="member-info">
-					<h3>Gustavo Arjones</h3>
-					<p>
-						Entrepreneur and CTO of Socialmetrix
-						<a target="_blank" href="http://twitter.com/arjones">Twitter</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/1157351292/IMG_2299.JPG)">
-				<div class="member-info">
-					<h3>Diego Ramírez</h3>
-					<p>
-						Pinche Programmer
-						<a target="_blank" href="https://twitter.com/diegoram">Twitter</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/3416584414/374eee5f98fdc59619b14baf26b58f5f.jpeg)">
-				<div class="member-info">
-					<h3 class="one-line">Luis Farzati</h3>
-					<p>
-						Programador con busarda. Evangelista del Apocalipsis
-						<a target="_blank" href="https://twitter.com/luisfarzati">Twitter</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/3606173010/73df77e498aa4aa2200f6266242ccec0.jpeg)">
-				<div class="member-info">
-					<h3>Pablo Paladino</h3>
-					<p>
-						Web Technologies Engineer
-						<a target="_blank" href="https://twitter.com/palamago">Twitter</a>
-						<a href="/projects.html#query=Pablo+Paladino">Proyectos</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/1557699557/penguin_armed.jpg)">
-				<div class="member-info">
-					<h3>Sebastián Scarano</h3>
-					<p>
-						Lead en Ministerio de Trabajo
-						<a target="_blank" href="https://twitter.com/develsas">Twitter</a>
-						<a href="/projects.html#query=Sebastián+Scarano">Proyectos</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/3064331698/ab8843bf13bc0392c11c46d9deeb7e08.jpeg)">
-				<div class="member-info">
-					<h3>Nicolás Meléndez</h3>
-					<p>
-						Arquitecto Java
-						<a target="_blank" href="https://twitter.com/nfmelendez">Twitter</a>
-						<a href="/projects.html#query=Nicolás+Meléndez">Proyectos</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/3052631576/f2ce53cf07a9ab508b8f9004d149f5a1.jpeg)">
-				<div class="member-info">
-					<h3>Walter Franck</h3>
-					<p>
-						Web Developer
-						<a target="_blank" href="https://twitter.com/wfranck">Twitter</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/1598161768/jorge_avatar_big.jpg)">
-				<div class="member-info">
-					<h3 class="one-line">Jorge Aliss</h3>
-					<p>
-						Father, Geek, Freelancer. Scala &amp; Play Framework fan
-						<a target="_blank" href="https://twitter.com/jaliss">Twitter</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(http://cl.ly/image/1k1Y330T240i/IMG_4075_4.png)">
-				<div class="member-info">
-					<h3>Chris Mordue</h3>
-					<p>
-						Analytics, distributed systems, backpacking
-						<a target="_blank" href="https://twitter.com/cmordue">Twitter</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/590375995/frodriguez.jpg)">
-				<div class="member-info">
-					<h3>Fernando Rodríguez</h3>
-					<p>
-						Tech Enthusiast. Professor of Distributed Systems
-						<a target="_blank" href="https://twitter.com/frodriguez">Twitter</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(http://cl.ly/image/00390F1B360n/img.png)">
-				<div class="member-info">
-					<h3>Diego Dell'Era</h3>
-					<p>
-						Developer at Socialmetrix
-						<a target="_blank" href="https://twitter.com/diegodellera">Twitter</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/1627538423/fottt.jpg)">
-				<div class="member-info">
-					<h3>Pablo Rodríguez</h3>
-					<p>
-						CEO at EstiloWeb.net
-						<a target="_blank" href="https://twitter.com/derfarg">Twitter</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/1904315197/martin.jpg)">
-				<div class="member-info">
-					<h3>Martín Gontovnikas</h3>
-					<p>
-						Geek, Nerd, Coder &amp; Fun
-						<a target="_blank" href="https://twitter.com/mgonto">Twitter</a>
-						<a href="/projects.html#query=Martín+Gontovnikas">Proyectos</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/3406182551/337fbb252c1feebb142aa5c73ef98b6a.jpeg)">
-				<div class="member-info">
-					<h3>Matías Saguir</h3>
-					<p>
-						Anime, Programación, Chábe y quizás Literatura
-						<a target="_blank" href="https://twitter.com/mativs">Twitter</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/378800000008943621/ca8e4269124e52977fac973b919b6bca.jpeg)">
-				<div class="member-info">
-					<h3>Matías Urbano</h3>
-					<p>
-						Enterpreneur &amp; Developer
-						<a target="_blank" href="https://twitter.com/matiasurbano">Twitter</a>
-						<a href="/projects.html#query=Matías+Urbano">Proyectos</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/378800000008960145/25663f39e4287f3fe24ef9f41538c9b9.jpeg)">
-				<div class="member-info">
-					<h3>Matías Almada</h3>
-					<p>
-						Desarrollador Web
-						<a target="_blank" href="https://twitter.com/hi_matt">Twitter</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(http://cl.ly/image/1y0L3T1V242Z/Profile_-_7.png)">
-				<div class="member-info">
-					<h3>Max Kraszewski</h3>
-					<p>
-						Cofounder &amp; CTO de Psicofxp y Opicos
-						<a target="_blank" href="https://twitter.com/minimalart">Twitter</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/1201114878/avatarguido.jpg)">
-				<div class="member-info">
-					<h3>Guido Vilariño</h3>
-					<p>
-						Co-founder at Fanwards
-						<a target="_blank" href="https://twitter.com/gvilarino">Twitter</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/1873834431/image.jpg)">
-				<div class="member-info">
-					<h3>Tom Roggero</h3>
-					<p>
-						Developer, runner &amp; UX lover
-						<a target="_blank" href="https://twitter.com/tomasdev">Twitter</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-		<li>
-			<div class="member-item" style="background-image:url(https://si0.twimg.com/profile_images/3750709184/6b0d874fb982314fe357d03800cee2c1.png)">
-				<div class="member-info">
-					<h3>Davo Galavotti</h3>
-					<p>
-						Data visualization and digital creative
-						<a target="_blank" href="https://twitter.com/pixelbeat">Twitter</a>
-					</p>
-				</div>
-			</div>
-		</li>
-
-	</ul>
-	-->
-
-	<div class="page-header">
-    <h1>Meetups amigos</h1>
-  </div>
-
-  <p>
-  	Algunos integrantes que formaron otros meetups afines (listados abajo), en los que se reúnen para tratar temas específicos :)
-  </p>
-
-	<div class="row groups">
-
-		<div class="span3 meetup">
-			<iframe width="225" height="320" src="http://meetu.ps/1HTmpl" frameborder="0"></iframe>
-		</div>
-
-		<div class="span3 meetup">
-			<iframe width="225" height="320" src="http://meetu.ps/1HTqFb" frameborder="0"></iframe>
-		</div>
-
-		<div class="span3 meetup">
-			<iframe width="225" height="320" src="http://meetu.ps/1HW3Cg" frameborder="0"></iframe>
-		</div>
-
-		<div class="span3 meetup">
-			<iframe width="225" height="320" src="http://meetu.ps/1HTr7n" frameborder="0"></iframe>
-		</div>
-
+	<div class="span3 meetup">
+		<iframe width="225" height="320" src="http://meetu.ps/1HTmpl" frameborder="0"></iframe>
 	</div>
+
+	<div class="span3 meetup">
+		<iframe width="225" height="320" src="http://meetu.ps/1HTqFb" frameborder="0"></iframe>
+	</div>
+
+	<div class="span3 meetup">
+		<iframe width="225" height="320" src="http://meetu.ps/1HW3Cg" frameborder="0"></iframe>
+	</div>
+
+	<div class="span3 meetup">
+		<iframe width="225" height="320" src="http://meetu.ps/1HTr7n" frameborder="0"></iframe>
+	</div>
+
 </div>
